<resources>
    <string name="app_name">RetrofitDemo</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="SignIn">sign in</string>
    <string name="SignUp">sign up</string>
    <string name="Email">Email</string>
    <string name="hintEmail">example@gmail.com</string>
    <string name="Phone">Phone</string>
    <string name="Gender">Gender</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Register">Register</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Task">Task</string>
    <string name="title_activity_tab_demo">TabDemoActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
