<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.devanshi.retrofitdemo.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/SignUp_image"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_name">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="text"
            android:id="@+id/etSignUp_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_email">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:id="@+id/etSignUp_email"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_phone">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phone"
            android:maxLength="10"
            android:inputType="phone"
            android:id="@+id/etSignUp_phone"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_password">
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/Password"
               android:inputType="textPassword"
               android:id="@+id/etSignUp_password"/>
    </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:id="@+id/text_input_gender">
       <RadioGroup
            android:layout_marginLeft="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiobutton"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/Female"
                android:id="@+id/SignUp_female_gender"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/Male"
                android:id="@+id/SignUp_male_gender"/>
        </RadioGroup>
   </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_margin="20dp"
        android:id="@+id/btn_register_SignUp"
        />
   </LinearLayout>

